<?xml version="1.0"?>
<package>
  <name>yhs_chassis_description</name>
  <version>0.0.0</version>
  <description>
    yhs_chassis_description
  </description>


  <maintainer email="jackey@todo.todo">jackey</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>



  <export>

  </export>
</package>
